set up templating

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "hbs": "^4.0.1"
+  },
+  "devDependencies": {
     "nodemon": "^1.14.3"
   }
 }
