--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/nodemon server.js -e js,hbs"
+    "start": "node server.js",
+    "start:dev": "./node_modules/.bin/nodemon server.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
